# apk_creator

./: .clang-format  .cmake-format.py  .gitignore  .ndk_env  AndroidManifest.xml  README.md  android_set.sh  build.sh  build_all.sh  build_pack.sh  vcpkg_setup.sh
.github/workflows/: ci.yml
cpp_lib/: CMakeLists.txt  CMakePresets.json  app_engine.hpp  build.sh  copy.sh  eye_renderer.cpp  eye_renderer.h  gl.h  input_handler.h  log.h  main.cpp  rectangles_renderer.cpp  rectangles_renderer.h  rust_helper.hpp  util.h
cpp_lib/ai/: CMakeLists.txt  ndkcamera.cpp  yolov8.cpp  yolov8.h  yolov8_obb.cpp  yolov8_pose.cpp  yolov8_seg.cpp  yolov8ncnn.cpp
cpp_lib/audio/: DefaultDataCallback.h  DefaultErrorCallback.h  IRenderableAudio.h  IRestartable.h  ITappable.h  LatencyTuningCallback.cpp  LatencyTuningCallback.h  Mp3SoundGenerator.h  OboeEngine.cpp  OboeEngine.h  Oscillator.h  SoundGenerator.cpp  SoundGenerator.h  SynthSound.h  TappableAudioSource.h
cpp_lib/camera/: CameraController.hpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_utils.cpp  image_reader.cpp
cpp_lib/java_helpers/: java_helper.hpp
cpp_lib/ndk_utils/: data_types.h  log.h  trace.h  util.h
cpp_lib/renderer/: eye_renderer.cpp  eye_renderer.h  gl.h  rectangles_renderer.cpp  rectangles_renderer.h  render.h  texture_renderer.hpp
doc/: native_lib.md  rust_lib.md
java/: build.sh
java/com/example/app/: MainActivity.java
lib/: CMakeLists.txt  CMakePresets.json  build.sh  gl.cpp  main.cpp  rectangles_renderer.cpp  render.h
res/layout/: activity_main.xml
res/values/: strings.xml
rust_lib/: Cargo.toml  build.rs  build.sh  copy.sh
rust_lib/src/: lib.rs
scripts/: android_set.sh  build_pack.sh  rust_setup.sh  vcpkg_setup.sh
src/com/example/app/: MainActivity.java
tools/: copy.sh  download_convert.sh  requirements.txt
