[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

# [dependencies]
# cargo-vcpkg = "0.1.7"
# opencv = "0.95.1"
#
# [package.metadata.vcpkg]
# git = "https://github.com/microsoft/vcpkg"
# rev = "4c1db68"
# dependencies = ["opencv"]
#
# [package.metadata.vcpkg.target]
# aarch64-linux-android = { dependencies = ["opencv"] }
