[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
# vcpkg = "0.2.15"
vcpkg_rs_mf = "0.3.1"
# yolo_detector = "1.0.1"
opencv = { version="0.95.1", default-features = false, features = ["imgproc", "highgui", "imgcodecs"]}
log = "0.4.28"
android_log = "0.1.3"
